# FrenchTarot.rs

./: .gitignore  .travis.yml  Makefile  README.md
backend/: Cargo.toml  Makefile  Rocket.toml  index.html
backend/migrations/2020-04-23-174520_create_games/: down.sql  up.sql
backend/src/: db.rs  main.rs  server.rs
backend/src/db/: accessors.rs  mod.rs  models.rs  schema.rs  utils.rs
backend/src/db/accessors/: game.rs
backend/src/routes/: game.rs  index.rs  mod.rs  user.rs
backend/src/websockets/: mod.rs
backend/static/css/: play.css
backend/templates/: index.html.tera
backend/templates/game/: create.html.tera  play.html.tera
backend/templates/user/: index.html.tera
docs/: 1-Requirements.md  2-UserStory.md  3-ArchitectureAndInterface.md
tarot-client/: Cargo.toml  Makefile
tarot-client/src/: js_api.rs  main.rs  view.rs  websocket.rs
tarot-client/src/ui/: info.rs  mod.rs  table.rs
tarot-client/src/websockets/: client.rs  handler_game.rs  handler_ui.rs  mod.rs
tarot-game/: Cargo.toml  Makefile
tarot-game/src/: lib.rs  utils.rs  view.rs  websocket.rs
tarot-lib/: Cargo.toml  Makefile
tarot-lib/src/: bot.rs  card.rs  game.rs  lib.rs  player.rs
tarot-lib/src/game/: events.rs  events_data.rs  game.rs  mod.rs  state_machine.rs
tarot-lib/src/game/events/: data.rs
tarot-lib/tests/: integration_test.rs
tarot-server/: Cargo.toml  Makefile
tarot-server/src/: conf.rs  main.rs
tarot-server/src/db/: models.rs  schema.rs  utils.rs
tarot-server/src/db/accessors/: game.rs  users.rs
tarot-server/src/db/models/: game.rs  user.rs
tarot-server/src/http_routes/: api.rs  game.rs  index.rs  user.rs  utils.rs
tarot-server/src/routes/: api.rs  game.rs  index.rs  mod.rs  user.rs
tarot-server/src/websockets/: mod.rs  server.rs
tarot-server/static/css/: play.css
tarot-server/static/images/tarot-cards/: README.md
tarot-server/templates/: base.html.tera  index.html.tera
tarot-server/templates/game/: create.html.tera  index.html.tera  play.html.tera
