[package]
name = "backend"
version = "0.1.0"
authors = ["Adrien Chardon <adrienchardon@mailoo.org>"]
edition = "2018"

[dependencies]
tarot_lib = { path = "../tarot-lib" }
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates", "serve"]
