[package]
name = "tarot-game"
version = "0.1.0"
authors = ["Adrien Chardon <adrienchardon@mailoo.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
tarot_lib = { path = "../tarot-lib" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

