[package]
name = "tarot-game"
version = "0.1.0"
authors = ["Adrien Chardon <adrienchardon@mailoo.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
tarot_lib = { path = "../tarot-lib" }
uuid = { version = "0.6", features = ["serde", "v4"] }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Attr',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Text',
  'Window',
  'ErrorEvent',
  'MessageEvent',
  'WebSocket',
]
