[package]
name = "tarot_lib"
version = "0.1.0"
authors = ["Adrien Chardon <adrienchardon@mailoo.org>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
