[package]
name = "tarot-server"
version = "0.1.0"
authors = ["Adrien Chardon <adrienchardon@mailoo.org>"]
edition = "2018"

[dependencies]
tarot_lib = { path = "../tarot-lib" }
diesel = { version = "1.4.0", features = ["sqlite", "uuid"] }
dotenv = "0.9.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"]}
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
ws = "0.9"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "tera_templates", "serve", "diesel_sqlite_pool"]
